--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -123,8 +123,9 @@
 // стилі для картинок магазинів
 
 .amazon-color {
-  filter: grayscale(100%); //світла тема
+  filter: $amazon-color;
+  // filter: grayscale(100%); //світла тема
 
-  filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%)
-    contrast(80%); //темна тема
+  // filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%)
+  //   contrast(80%); //темна тема
 }
