--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -104,5 +104,6 @@ $primary-brdr-clr-light: var(--light-brdr); //#ffffff
 $registration-modal-brdr-clr-light: var(--light-brdr-reg); //#f6f6f6;
 
 /* AMAZON COLORS */
-$amazon-color: var(--light-color-amazom); //invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg)
-    // brightness(1000%) contrast(80%);
+$amazon-color: var(
+  --light-color-amazom
+); //invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%) contrast(80%);
