--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -1,4 +1,4 @@
-.container--home-page {
+/* .container--home-page {
   padding-top: 52px;
   @media screen and (min-width: 1440px) {
     display: flex;
@@ -7,7 +7,7 @@
   @media (min-width: 768px) and (max-width: 1440px) {
     padding-top: 72px;
   }
-}
+} */
 
 .sidebar {
   padding-top: 40px;
@@ -125,6 +125,5 @@
 .amazon-color {
   filter: grayscale(100%); //світла тема
 
-  filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%)
-    contrast(80%); //темна тема
+  filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%) contrast(80%); //темна тема
 }
