--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -9,6 +9,12 @@
   }
 } */
 
+.container--home-page {
+  @media screen and (min-width: 1440px) {
+    display: flex;
+  }
+}
+
 .sidebar {
   padding-top: 40px;
 
