--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -1,17 +1,13 @@
-/* .container--home-page {
+.container--home-page {
   padding-top: 52px;
+
   @media screen and (min-width: 1440px) {
     display: flex;
     padding-top: 72px;
   }
+
   @media (min-width: 768px) and (max-width: 1440px) {
     padding-top: 72px;
-  }
-} */
-
-.container--home-page {
-  @media screen and (min-width: 1440px) {
-    display: flex;
   }
 }
 
@@ -93,6 +89,21 @@
   margin-left: 12px;
 }
 
+// .support-list {
+//   max-height: 188px;
+//   padding-left: 40px;
+//   margin-bottom: 16px;
+
+//   @media screen and (min-width: 768px) {
+//     max-height: 292px;
+//     margin-bottom: 32px;
+//   }
+
+//   @media screen and (min-width: 1440px) {
+//     margin-bottom: 40px;
+//   }
+// }
+
 .support-link {
   height: 32px;
   display: flex;
@@ -124,12 +135,4 @@
   @media screen and (min-width: 1440px) {
     margin-bottom: 40px;
   }
-}
-
-// стилі для картинок магазинів
-
-.amazon-color {
-  filter: grayscale(100%); //світла тема
-
-  filter: invert(1%) sepia(1%) saturate(1%) hue-rotate(1deg) brightness(1000%) contrast(80%); //темна тема
 }
