--- a/src/sass/_shopping-list.scss
+++ b/src/sass/_shopping-list.scss
@@ -11,16 +11,16 @@
 .shop-list__container {
   position: relative;
   padding-bottom: 40px;
-  padding-top: 42px;
+  padding-top: 40px;
 
   @media screen and (min-width: 768px) {
     padding-bottom: 84px;
-    padding-top: 62px;
+    //padding-top: 62px;
   }
 
   @media screen and (min-width: 1440px) {
     padding-left: 40px;
-    padding-top: 52px;
+    //padding-top: 52px;
   }
 }
 
