--- a/src/sass/_bookshelf.scss
+++ b/src/sass/_bookshelf.scss
@@ -156,6 +156,7 @@
   color: $primary-txt-clr-light;
   text-transform: uppercase;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .bestsellers-button:hover,
