--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -13,22 +13,27 @@
   color: $primary-txt-clr-light;
   border: 1.5px solid $primary-txt-clr-light;
   border-radius: 0px 0px 8px 8px;
-  width: 375px;
+  max-width: 375px;
   margin-left: auto;
   margin-right: auto;
   fill: $primary-txt-clr-light;
+
   @media (max-width: 768px) {
     padding-left: 16px;
     padding-right: 16px;
   }
+
   @media (min-width: 768px) {
     width: 768px;
   }
+
   @media (min-width: 1440px) {
     width: 1440px;
   }
+
   transition: 0.5s;
 }
+
 .button-header-home {
   padding: 8px 16px;
   width: 72px;
@@ -39,11 +44,13 @@
   text-transform: uppercase;
   color: $primary-txt-clr-light;
   cursor: pointer;
+
   &.color-page {
     background-color: #eac645;
     border-radius: 36px;
   }
 }
+
 .button-header-shoping {
   font-size: 14px;
   line-height: 1.3;
@@ -54,6 +61,7 @@
   margin-left: 16px;
   display: flex;
   align-items: center;
+
   &.color-page {
     background-color: #eac645;
     padding-left: 16px;
@@ -61,35 +69,43 @@
     border-radius: 36px;
   }
 }
+
 .button-header-shoping {
   @media screen and (min-width: 1140px) {
     margin-left: 24px;
   }
 }
+
 .logo-group {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .header-button-nav {
   margin-left: 40px;
   display: flex;
+
   @media (max-width: 768px) {
     display: none;
   }
 }
+
 .user-img-auth {
   width: 37px;
   height: 37px;
   border-radius: 50%;
 }
+
 .button-user-in {
   font-size: 20px;
 }
+
 .contakts-list-icon {
   align-self: baseline;
   fill: $primary-txt-clr-light;
 }
+
 .user-auth-zone {
   display: flex;
   align-items: center;
@@ -97,10 +113,12 @@
   background: $primary-accent-color;
   padding: 4px;
   border-radius: 17px;
+
   &:hover {
     cursor: pointer;
   }
 }
+
 .nik-name {
   font-family: 'DM Sans';
   font-weight: 700;
@@ -110,10 +128,12 @@
   color: $additional-txt-clr-light;
   letter-spacing: -0.02em;
 }
+
 .svg-user-auth {
   // ============================================================
   fill: $additional-txt-clr-light;
 }
+
 .logo-group-header {
   display: flex;
   align-items: center;
@@ -124,20 +144,25 @@
 .logo-span-header {
   fill: $primary-txt-clr-light;
 }
+
 .header-not-uyth {
   display: none;
 }
+
 .button-sing-auth-js {
   @media (max-width: 768px) {
     display: none;
   }
 }
+
 .burger-menu-header {
   display: inline-block;
   align-items: end;
+
   @media (min-width: 768px) {
     display: none;
   }
+
   & .burger-menu-span1,
   & .burger-menu-span3,
   & .burger-menu-span5 {
@@ -149,6 +174,7 @@
     margin: 1px auto;
     transition: 0.3s;
   }
+
   & .burger-menu-span2,
   & .burger-menu-span4 {
     width: 16px;
@@ -160,12 +186,15 @@
     transition: 0.4s;
   }
 }
+
 .button-themes {
   margin-left: auto;
   display: flex;
+
   @media (max-width: 768px) {
     margin-right: 14px;
   }
+
   @media (min-width: 769px) {
     margin-right: 24px;
   }
