--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -24,11 +24,11 @@
   }
 
   @media (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
   }
 
   @media (min-width: 1440px) {
-    width: 1440px;
+    max-width: 1440px;
   }
 
   transition: 0.5s;
